[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bemind-ai"
version = "0.1.0"
authors = [
    {name = "BeMind Technology Co., Ltd.", email = "dev@bemindlab.com"},
]
description = "A Python SDK for integrating AI capabilities into BeMind applications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/bemindlab/bmt-bemind-ai"
"Bug Reports" = "https://github.com/bemindlab/bmt-bemind-ai/issues"
"Source" = "https://github.com/bemindlab/bmt-bemind-ai"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bemind_ai = ["py.typed"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--tb=short",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/bemind_ai"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist"]